Refactor API handler and integrate rate limiting in Fastify setup

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "test": "tsc --noEmit"
     },
     "dependencies": {
+        "@fastify/rate-limit": "^10.3.0",
         "@netlify/functions": "^4.1.7",
         "fastify": "^5.4.0",
         "serverless-http": "^3.2.0"
