--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "dependencies": {
         "@fastify/rate-limit": "^10.3.0",
         "@netlify/functions": "^4.1.7",
+        "drizzle-orm": "^0.44.2",
         "fastify": "^5.4.0",
-        "serverless-http": "^3.2.0"
+        "postgres": "^3.4.7",
+        "serverless-http": "^3.2.0",
+        "uuid": "^11.1.0"
     },
     "devDependencies": {
-        "@types/node": "^24.0.4"
+        "@types/node": "^24.0.4",
+        "@types/uuid": "^10.0.0"
     }
 }
