--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     },
     "devDependencies": {
         "@types/node": "^24.0.4",
-        "@types/uuid": "^10.0.0"
+        "@types/uuid": "^10.0.0",
+        "drizzle-kit": "^0.31.2"
     }
 }
-
