Add Redis configuration and update environment variables in .env.example
- Added Redis connection settings to index.ts
- Updated .env.example to include Redis environment variables
- Modified type definitions to include Redis environment variables
- Adjusted rate limit configuration to use Redis
- Updated README.md for environment variable setup instructions
- Enhanced HTML template with new UI elements for message handling

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-URI="Your database connection string"
-SECRET="Your secret key"
+URI=""
+SECRET=""
+REDIS_HOST=""
+REDIS_PORT=""
+REDIS_USERNAME=""
+REDIS_PASSWORD=""
