--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@netlify/functions": "^4.1.7",
         "drizzle-orm": "^0.44.2",
         "fastify": "^5.4.0",
+        "ioredis": "^5.6.1",
         "postgres": "^3.4.7",
         "serverless-http": "^3.2.0",
         "uuid": "^11.1.0"
