Switch to nextjs

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,1 @@
-URI=""
-SECRET=""
-REDIS_HOST=""
-REDIS_PORT=""
-REDIS_USERNAME=""
-REDIS_PASSWORD=""
+NEXT_PUBLIC_API_ENDPOINT="https://api-xcfio.netlify.app"
