Change module type from commonjs to module

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vaultly",
     "version": "1.0.0",
     "main": "index.js",
-    "type": "commonjs",
+    "type": "module",
     "author": "xcfio",
     "license": "MIT",
     "repository": {
